support http range and digest as taskID
